fix(nitrite): address NullAway findings across runtime code
Apply the broader set of Nitrite NullAway fixes
with additional local cleanup of fully qualified imports in main code.

The changes propagate @Nullable through query parsing, criteria expression
handling, prepared/stored query state, repository operations, association filter
resolution, AST filter evaluation, and spatial filter creation where the code
can legitimately produce or consume null values.

Fix cascade batch saves in NitriteEntityOperations by using an explicit
non-vetoing predicate for association batch persistence. The previous null to
predicate conversion could skip every associated entity in cascade saves.

Also add null guards around transaction context, index annotations, version
properties, filter evaluators, JSON parse results, array parameters, and value
string conversions, and add the missing delete() override.